--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
- <link rel="icon" type="image/x-icon" href="frontend/favicon (3).ico" />
+ <link rel="icon" type="image/x-icon" href="/favicon (3).ico" />
+   <link href="/src/index.css" rel="stylesheet">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shaik Awaiz</title>
